--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -26,5 +26,8 @@
 
     <h2>Conclusion</h2>
     <p>This example demonstrates the basic structure of an HTML document, including headings, paragraphs, and a clickable image. HTML is a powerful language that allows you to create structured, well-organized web pages. By using headings, you can create a clear and accessible content structure, and by using images and links, you can make your page more engaging.</p>
+
+    <h2>View My Tweets</h2>
+    <p>Click <a href="tweets.html">here</a> to view my embedded tweets!</p>
 </body>
 </html>
