--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -35,6 +35,39 @@
 
             <h2>Conclusion</h2>
             <p>This example demonstrates the basic structure of an HTML document, including headings, paragraphs, and a clickable image. HTML is a powerful language that allows you to create structured, well-organized web pages. By using headings, you can create a clear and accessible content structure, and by using images and links, you can make your page more engaging.</p>
+
+            <h2>Table of Learners</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Age</th>
+                        <th>Country</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>John</td>
+                        <td>25</td>
+                        <td>USA</td>
+                    </tr>
+                    <tr>
+                        <td>Emily</td>
+                        <td>28</td>
+                        <td>Canada</td>
+                    </tr>
+                    <tr>
+                        <td>Michael</td>
+                        <td>32</td>
+                        <td>Australia</td>
+                    </tr>
+                    <tr>
+                        <td>Sophia</td>
+                        <td>21</td>
+                        <td>UK</td>
+                    </tr>
+                </tbody>
+            </table>
         </article>
 
         <aside>
