--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,28 +6,77 @@
     <title>Example Page</title>
 </head>
 <body>
-    <h1>Welcome to My Example Page</h1>
+    <header>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
+    </header>
 
-    <h2>Introduction</h2>
-    <p>This page is a simple example of how to use various HTML elements. We will include headings of different levels, multiple paragraphs, and a clickable image. HTML, or HyperText Markup Language, is the standard language for creating web pages.</p>
+    <main>
+        <article>
+            <h1>Welcome to My Example Page</h1>
 
-    <h2>Headings and Paragraphs</h2>
-    <h3>Headings</h3>
-    <p>Headings are used to create a hierarchical structure on your web page. There are six levels of headings in HTML, from <code>&lt;h1&gt;</code> to <code>&lt;h6&gt;</code>. The most important heading is <code>&lt;h1&gt;</code>, and the least important is <code>&lt;h6&gt;</code>.</p>
-    
-    <h3>Paragraphs</h3>
-    <p>Paragraphs are used to group related sentences together. In HTML, paragraphs are created with the <code>&lt;p&gt;</code> tag. Each paragraph will appear on a new line and will have some space between it and the previous paragraph.</p>
-    
-    <h2>Clickable Image</h2>
-    <p>Below is a clickable image. When you click on the image, you will be redirected to the OpenAI website. Click the image to test it out!</p>
-    <a href="https://www.openai.com" target="_blank">
-        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo">
-    </a>
+            <h2>Introduction</h2>
+            <p>This page is a simple example of how to use various HTML elements. We will include headings of different levels, multiple paragraphs, and a clickable image. HTML, or HyperText Markup Language, is the standard language for creating web pages.</p>
 
-    <h2>Conclusion</h2>
-    <p>This example demonstrates the basic structure of an HTML document, including headings, paragraphs, and a clickable image. HTML is a powerful language that allows you to create structured, well-organized web pages. By using headings, you can create a clear and accessible content structure, and by using images and links, you can make your page more engaging.</p>
+            <h2>Headings and Paragraphs</h2>
+            <h3>Headings</h3>
+            <p>Headings are used to create a hierarchical structure on your web page. There are six levels of headings in HTML, from <code>&lt;h1&gt;</code> to <code>&lt;h6&gt;</code>. The most important heading is <code>&lt;h1&gt;</code>, and the least important is <code>&lt;h6&gt;</code>.</p>
 
-    <h2>View My Tweets</h2>
-    <p>Click <a href="tweets.html">here</a> to view my embedded tweets!</p>
+            <h3>Paragraphs</h3>
+            <p>Paragraphs are used to group related sentences together. In HTML, paragraphs are created with the <code>&lt;p&gt;</code> tag. Each paragraph will appear on a new line and will have some space between it and the previous paragraph.</p>
+
+            <h2>Clickable Image</h2>
+            <p>Below is a clickable image. When you click on the image, you will be redirected to the OpenAI website. Click the image to test it out!</p>
+            <a href="https://www.openai.com" target="_blank">
+                <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo">
+            </a>
+
+            <h2>Conclusion</h2>
+            <p>This example demonstrates the basic structure of an HTML document, including headings, paragraphs, and a clickable image. HTML is a powerful language that allows you to create structured, well-organized web pages. By using headings, you can create a clear and accessible content structure, and by using images and links, you can make your page more engaging.</p>
+
+            <h2>Table of Learners</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Age</th>
+                        <th>Country</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>John</td>
+                        <td>25</td>
+                        <td>USA</td>
+                    </tr>
+                    <tr>
+                        <td>Emily</td>
+                        <td>28</td>
+                        <td>Canada</td>
+                    </tr>
+                    <tr>
+                        <td>Michael</td>
+                        <td>32</td>
+                        <td>Australia</td>
+                    </tr>
+                    <tr>
+                        <td>Sophia</td>
+                        <td>21</td>
+                        <td>UK</td>
+                    </tr>
+                </tbody>
+            </table>
+        </article>
+
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
+    </main>
+
+    <footer>
+        <p>Made by Your Name - <a href="https://www.yourlink.com" target="_blank">here</a>.</p>
+    </footer>
 </body>
 </html>
