--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -3,80 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Example Page</title>
+    <title>Your Name - Personal Portfolio</title>
 </head>
 <body>
     <header>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="tweets.html">Tweets</a></li>
-        </ul>
+        <h1>Your Name</h1>
+        <p>A brief tagline or professional statement.</p>
     </header>
 
-    <main>
-        <article>
-            <h1>Welcome to My Example Page</h1>
+    <nav>
+        <ul>
+            <li><a href="#introduction">Introduction</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#about">About Me</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
 
-            <h2>Introduction</h2>
-            <p>This page is a simple example of how to use various HTML elements. We will include headings of different levels, multiple paragraphs, and a clickable image. HTML, or HyperText Markup Language, is the standard language for creating web pages.</p>
+    <section id="introduction">
+        <h2>Introduction</h2>
+        <p>Describe yourself here.</p>
+    </section>
 
-            <h2>Headings and Paragraphs</h2>
-            <h3>Headings</h3>
-            <p>Headings are used to create a hierarchical structure on your web page. There are six levels of headings in HTML, from <code>&lt;h1&gt;</code> to <code>&lt;h6&gt;</code>. The most important heading is <code>&lt;h1&gt;</code>, and the least important is <code>&lt;h6&gt;</code>.</p>
-
-            <h3>Paragraphs</h3>
-            <p>Paragraphs are used to group related sentences together. In HTML, paragraphs are created with the <code>&lt;p&gt;</code> tag. Each paragraph will appear on a new line and will have some space between it and the previous paragraph.</p>
-
-            <h2>Clickable Image</h2>
-            <p>Below is a clickable image. When you click on the image, you will be redirected to the OpenAI website. Click the image to test it out!</p>
-            <a href="https://www.openai.com" target="_blank">
-                <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo">
-            </a>
-
-            <h2>Conclusion</h2>
-            <p>This example demonstrates the basic structure of an HTML document, including headings, paragraphs, and a clickable image. HTML is a powerful language that allows you to create structured, well-organized web pages. By using headings, you can create a clear and accessible content structure, and by using images and links, you can make your page more engaging.</p>
-
-            <h2>Table of Learners</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Age</th>
-                        <th>Country</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>John</td>
-                        <td>25</td>
-                        <td>USA</td>
-                    </tr>
-                    <tr>
-                        <td>Emily</td>
-                        <td>28</td>
-                        <td>Canada</td>
-                    </tr>
-                    <tr>
-                        <td>Michael</td>
-                        <td>32</td>
-                        <td>Australia</td>
-                    </tr>
-                    <tr>
-                        <td>Sophia</td>
-                        <td>21</td>
-                        <td>UK</td>
-                    </tr>
-                </tbody>
-            </table>
+    <section id="projects">
+        <h2>Projects</h2>
+        <article class="project">
+            <h3>Project Title 1</h3>
+            <p>Description of Project 1.</p>
+            <a href="https://link-to-project1.com" target="_blank">View Project</a>
         </article>
+        <article class="project">
+            <h3>Project Title 2</h3>
+            <p>Description of Project 2.</p>
+            <a href="https://link-to-project2.com" target="_blank">View Project</a>
+        </article>
+        <!-- Add more projects as needed -->
+    </section>
 
-        <aside>
-            <p>placeholder to add comment thread later</p>
-        </aside>
-    </main>
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Describe your background, skills, or hobbies here.</p>
+    </section>
+
+    <section id="contact">
+        <h2>Contact</h2>
+        <p><a href="mailto:your.email@example.com">your.email@example.com</a></p>
+        <p><a href="https://www.linkedin.com/in/yourprofile" target="_blank">LinkedIn</a></p>
+        <p><a href="https://github.com/yourprofile" target="_blank">GitHub</a></p>
+    </section>
 
     <footer>
-        <p>Made by Your Name - <a href="https://www.yourlink.com" target="_blank">here</a>.</p>
+        <p>&copy; 2024 Your Name</p>
     </footer>
 </body>
 </html>
